--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,5 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+@import "/node_modules/bootstrap/dist/css/bootstrap-grid.min.css";
+@import "/node_modules/bootstrap/dist/css/bootstrap-reboot.min.css";
+@import "/node_modules/bootstrap/dist/css/bootstrap-utilities.min.css";
 
+@import "./styles/index";
