added new cars, added new switch between cars, added change colors

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -1,6 +1,9 @@
 @import "./variables";
 @import "./components/arrows";
 @import "./components/buttons";
+@import "./components/colors-section";
+@import "./components/select-section";
+@import "./components/drag-notes";
 @import "./pages/page";
 
 * {
